# TensorRT-Incubator

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  mlir-tensorrt.txt  pyproject.toml  setup.py
mlir-tensorrt/: .bazelrc  .clang-format-ignore  .dockerignore  .gitignore  .ignore  .pre-commit-config.yaml  BUILD  CMakeLists.txt  CMakeOptions.cmake  CMakePresets.json  CONTRIBUTING.md  DependencyProvider.cmake  NOTICE  README.md  Version.cmake  WORKSPACE  build.sh  deps.bzl  pyproject.toml  requirements.txt  requirements_lock.txt  version.bzl
mlir-tensorrt/.devcontainer/: devcontainer.json  generate.py
mlir-tensorrt/.devcontainer/cuda12.5-rockylinux8-gcc11/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda12.5-ubuntu-llvm17/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda12.9-rockylinux8/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda12.9-rockylinux8-gcc11/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda12.9-rockylinux8-prebuilt/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda12.9-rockylinux9/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda12.9-rockylinux9-prebuilt/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda12.9-ubuntu-llvm17/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda12.9-ubuntu22.04/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda12.9-ubuntu22.04-prebuilt/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda12.9-ubuntu24.04/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda12.9-ubuntu24.04-prebuilt/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda13.0-rockylinux8/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda13.0-rockylinux8-prebuilt/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda13.0-rockylinux9-prebuilt/: devcontainer.json
mlir-tensorrt/.devcontainer/cuda13.0-ubuntu/: devcontainer.json
mlir-tensorrt/build_tools/: llvm-project.patch  llvm_commit.txt  stablehlo.patch  stablehlo_aggressive_folder.patch
mlir-tensorrt/common/: CMakeLists.txt
mlir-tensorrt/compiler/: CMakeLists.txt
mlir-tensorrt/docker/: Dockerfile  run_docker.sh
mlir-tensorrt/docs/: Building.md  DevContainer.md  Developers.md  StableHLOCompiler.md
mlir-tensorrt/executor/: CMakeLists.txt
mlir-tensorrt/kernel/: CMakeLists.txt
mlir-tensorrt/python/: CMakeLists.txt  CompilerPackage.cmake  CompilerPackageUtils.cmake  requirements-dev.txt  requirements.txt
mlir-tensorrt/tensorrt/: CMakeLists.txt  README.md
mlir-tensorrt/test/: BUILD  CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir-tensorrt/tools/: CMakeLists.txt  MlirTensorRtOpt.cpp  MlirTensorRtTblgen.cpp
tripy/: .gitignore  .lldbinit  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.release  README.md  RELEASE.md  __init__.py  config.html  config.py  constants.py  datatype.html  datatype.py  device.html  dtype_info.py  exception.py  export.py  function_registry.py  genindex.html  index.html  jit.py  launch-notebook.sh  logger.html  objects.inv  out.txt  packages.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  shape.html  test_out_of_bound.py  test_shape_input.py  trace-inv.py  types.py
tripy/.devcontainer/: devcontainer.json
tripy/.doctrees/: config.doctree  environment.pickle  index.doctree  shape.doctree
tripy/_modules/: index.html
tripy/_sources/: config.rst.txt  datatype.rst.txt  index.rst.txt  logger.rst.txt  shape.rst.txt
tripy/_static/: pygments.css  style.css
tripy/backend/: __init__.py  compiler_api.py  jit.py  utils.py
tripy/common/: __init__.py  allocator.py  array.py  ctypes.py  datatype.py  device.py  exception.py  logging.py  shape_bounds.py  types.py  utils.py
tripy/compiler/: arg_info.html  executable.html  index.html  input_info.html
tripy/docs/: README.md  conf.py  generate_rsts.py  packages.html
tripy/exception/: index.html  tripy_exception.html
tripy/flat_ir/: __init__.py  flat_ir.py  layer.py  ops.py  tensor.py  utils.py
tripy/frontend/: __init__.py  device.py  dim.py  named_dim.py  shape.py  tensor.py  tensor_expression.py  tensor_initializers.py  tensor_ops.py  utils.py
tripy/logging/: __init__.py  logger.py  logging.py  verbosity.py  verbosity_trie.py
tripy/modules/: conv.html  group_norm.html  index.html  layer_norm.html  linear.html  parameter.html
tripy/notebooks/: resnet50.ipynb
tripy/nvtripy/: __init__.py  config.py  constants.py  export.py  function_registry.py  types.py  wrappers.py
tripy/operations/: index.html
tripy/ops/: __init__.py  allocator.py  base.py  binary_elementwise.py  copy.py  storage.py  value.py
tripy/post0_developer_guides/: architecture.html  debugging.html  design-decisions.html  how-to-add-new-ops.html  mlir-dialect-python-apis.html
tripy/pre0_user_guides/: 00-introduction-to-tripy.html  01-quantization.html  introduction-to-tripy.html
tripy/prebuilt_docs/: .buildinfo  genindex.html  objects.inv  py-modindex.html  searchindex.js
tripy/processed_mds/: README.html
tripy/scripts/: generate_tripy_integration_ir.py
tripy/tensor/: index.html
tripy/tensor_operations/: arange.html  argmin.html  concatenate.html  cos.html  dequantize.html  exp.html  gather.html  iota.html  masked_fill.html  ones_like.html  relu.html  rsqrt.html  split.html  tanh.html  var.html  zeros.html  zeros_like.html
tripy/tests/: README.md  conftest.py  helper.py  paths.py  test_config.py  test_diffusion.py  test_examples.py  test_files.py  test_function_registry.py  test_helper.py  test_internal_docs.py  test_notebooks.py  test_packaging.py  test_tests.py  test_ux.py
tripy/tools/: add_copyright.py  download_mlir_trt_package.sh  stablehlo_runner.py
tripy/trace/: __init__.py  layer.py  tensor.py  trace.py
tripy/tripy/: __init__.py  config.py  constants.py  constraints.py  dtype_info.py  export.py  function_registry.py  types.py  wrappers.py
tripy/util/: __init__.py  function_registry.py  logging.py  stack_info.py  util.py
tripy/utils/: __init__.py  ast.py  export.py  function_registry.py  ops.py  result.py  stack_info.py  utils.py
(+3634 files in other folders)
