[project]
name = "nvtripy"
version = "0.0.8"
authors = [{ name = "NVIDIA", email = "svc_tensorrt@nvidia.com" }]
description = "Tripy: A Python Programming Model For TensorRT"
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "Apache 2.0" }
dependencies = [
  "tensorrt~=10.0",
  "mlir-tensorrt-compiler==0.1.38+cuda12.trt105",
  "mlir-tensorrt-runtime==0.1.38+cuda12.trt105",
  "colored==2.2.3",
]

[project.urls]
Repository = "https://github.com/NVIDIA/tensorrt-incubator/tripy/"
Issues = "https://github.com/NVIDIA/tensorrt-incubator/issues"
Documentation = "https://nvidia.github.io/TensorRT-Incubator/"


[build-system]
requires = [
  "setuptools==75.3.0",
  "wheel==0.44.0",
  # For stubgen:
  "mypy==1.11.0",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pre-commit==3.6.0"]
build = [
  "setuptools==75.3.0",
  "wheel==0.44.0",
  # For stubgen:
  "mypy==1.11.0",
]
doc_test_common = [
  "black==24.10.0",
  "torch==2.4.0+cu121",
  "numpy==1.25.0",
  # cupy requires NVRTC but does not specify it as a package dependency
  "nvidia-cuda-nvrtc-cu12",
  "cupy-cuda12x",
]
docs = [
  "sphinx==7.2.6",
  "furo==2024.8.6",
  "sphinx-copybutton==0.5.2",
  "sphinx-toolbox==3.5.0",
  "docutils==0.20.1",
  "myst-parser==2.0.0",
  "sphinxcontrib-mermaid==0.9.2",
  "nvtripy[doc_test_common]",
  # Needed for guides:
  "nvidia-modelopt==0.11.1",
  "transformers==4.44.2",
  "datasets==2.21.0",
]
test = [
  "pytest==7.1.3",
  "pytest-virtualenv==1.8.0",
  "pytest-profiling==1.7.0",
  "pytest-cov==4.1.0",
  "pytest-xdist==3.6.1",
  "pytest-benchmark==4.0.0",
  "pytest-lazy-fixture==0.6.3",
  "pytest-mock==3.14.0",
  "path.py==12.5.0",
  # Triton is required for torch.compile
  "triton==3.0.0",
  "snakeviz==2.2.0",
  "coverage==7.4.1",
  "vulture==2.11",
  "nvtripy[doc_test_common]",
  "pytest-notebook==0.10.0",
  "notebook==7.2.2",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "l1: Indicates that the test should only be run in nightlies.",
  "l1_release_package: Indicates that the test should be run in nightlies using the public build of Tripy.",
]
