[project]
name = "nvtripy"
version = "0.1.2"
authors = [{ name = "NVIDIA", email = "svc_tensorrt@nvidia.com" }]
description = "Tripy: A Python Programming Model For TensorRT"
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "Apache 2.0" }
dependencies = [
  "tensorrt>=10.11",
  "mlir-tensorrt-compiler==0.1.42+cuda12.trt109",
  "mlir-tensorrt-runtime==0.1.42+cuda12.trt109",
  "colored==2.3.0",
]

[project.urls]
Repository = "https://github.com/NVIDIA/tensorrt-incubator/tripy/"
Issues = "https://github.com/NVIDIA/tensorrt-incubator/issues"
Documentation = "https://nvidia.github.io/TensorRT-Incubator/"


[build-system]
requires = [
  "setuptools==80.9.0",
  "wheel==0.45.1",
  # For stubgen:
  "mypy==1.16.1",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pre-commit==4.2.0"]
build = [
  "setuptools==80.9.0",
  "wheel==0.45.1",
  # For stubgen:
  "mypy==1.16.1",
]
doc_test_common = [
  "black==24.10.0",
  "torch==2.4.0+cu121",
  "numpy==1.25.0",
  # cupy requires NVRTC but does not specify it as a package dependency
  "nvidia-cuda-nvrtc-cu12",
  "cupy-cuda12x",
]
docs = [
  "sphinx==7.4.7",
  "furo==2024.8.6",
  "sphinx-copybutton==0.5.2",
  "sphinx-toolbox==4.0.0",
  "docutils==0.21.2",
  "myst-parser==3.0.1",
  "sphinxcontrib-mermaid==1.0.0",
  "nvtripy[doc_test_common]",
  # Needed for guides:
  "nvidia-modelopt==0.29.0",
  "transformers==4.46.2",
  "datasets==3.6.0",
]
test = [
  "pytest==7.4.4",
  "pytest-virtualenv==1.8.1",
  "pytest-profiling==1.8.1",
  "pytest-cov==6.2.1",
  "pytest-xdist==3.8.0",
  "pytest-benchmark==4.0.0",
  "pytest-lazy-fixture==0.6.3",
  "pytest-mock==3.14.1",
  "path.py==12.5.0",
  # Triton is required for torch.compile
  "triton==3.0.0",
  "snakeviz==2.2.2",
  "coverage==7.9.2",
  "vulture==2.14",
  "nvtripy[doc_test_common]",
  "pytest-notebook==0.10.0",
  "notebook==7.4.4",
  "polygraphy==0.49.24",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "l1: Indicates that the test should only be run in nightlies.",
  "l1_release_package: Indicates that the test should be run in nightlies using the public build of Tripy.",
]
