[project]
name = "nvtripy"
version = "0.1.5"
authors = [{ name = "NVIDIA", email = "svc_tensorrt@nvidia.com" }]
description = "Tripy: A Python Programming Model For TensorRT"
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "Apache 2.0" }
dependencies = [
  "tensorrt-cu12>=10.15,<11",
  "mlir-tensorrt-compiler==0.1.43+cuda12.trt109",
  "mlir-tensorrt-runtime==0.1.43+cuda12.trt109",
  "colored==2.2.3",
  "nvidia-cuda-runtime-cu12",
]

[project.urls]
Repository = "https://github.com/NVIDIA/tensorrt-incubator/tripy/"
Issues = "https://github.com/NVIDIA/tensorrt-incubator/issues"
Documentation = "https://nvidia.github.io/TensorRT-Incubator/"


[build-system]
requires = [
  "setuptools==82.0.0",
  "wheel==0.46.3",
  "scikit-build==0.18.1",
  # For stubgen:
  "mypy==1.19.1",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pre-commit==4.5.1"]
build = [
  "setuptools==82.0.0",
  "wheel==0.46.3",
  "scikit-build==0.18.1",
  # For stubgen:
  "mypy==1.19.1",
]
doc_test_common = [
  "black==26.1.0",
  "torch==2.10.0+cu130",
  "numpy==1.26.0",
  # cupy requires NVRTC but does not specify it as a package dependency
  "nvidia-cuda-nvrtc",
  "cupy-cuda13x",
]
docs = [
  "sphinx==8.1.3",
  "furo==2025.12.19",
  "sphinx-copybutton==0.5.2",
  "sphinx-toolbox==4.1.2",
  "docutils==0.21.2",
  "myst-parser==4.0.1",
  "sphinxcontrib-mermaid==2.0.0",
  "scikit-build==0.18.1",
  "ninja>=1.11.1.4",
  "more-itertools>=10.0.0",
  "nvtripy[doc_test_common]",
  # Needed for guides:
  "nvidia-modelopt==0.41.0",
  "transformers==4.46.2",
  "datasets==4.5.0",
]
test = [
  "pytest==9.0.2",
  "pytest-virtualenv==1.8.1",
  "pytest-profiling==1.8.1",
  "pytest-cov==7.0.0",
  "pytest-xdist==3.8.0",
  "pytest-benchmark==5.2.3",
  "pytest-mock==3.15.1",
  "path.py==12.5.0",
  # Triton is required for torch.compile
  "triton==3.6.0",
  "snakeviz==2.2.2",
  "coverage==7.13.4",
  "vulture==2.14",
  "nvtripy[doc_test_common]",
  "pytest-notebook==0.10.0",
  "notebook==7.5.3",
  "polygraphy==0.49.26",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "l1: Indicates that the test should only be run in nightlies.",
  "l1_release_package: Indicates that the test should be run in nightlies using the public build of Tripy.",
]
